<resources>
    <string name="app_name">Horus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="unimplemented">Unimplemented</string>
    <string name="places_title">Places</string>
    <string name="trips_title">Trips</string>
    <string name="more_button_text">More</string>
    <string name="card_with_no_title">Untiteled</string>
    <string name="card_label">Explore</string>
    <string name="card_content_description">item card content</string>
    <string name="title_activity_item_detail2">Item detail page</string>
    <string name="float_btn_trip_label">Trip</string>
    <string name="float_btn_place_label">Place</string>
    <string name="title_activity_add_place">Create a new place</string>
    <string name="title_activity_add_trip">Create a new trip</string>
    <string name="create_place_btn">SAVE</string>
    <string name="place_description_hint">Place Description</string>
    <string name="place_name_hint">Place Name</string>
    <string name="err_msg_place_name">Enter place name</string>
    <string name="err_msg_place_address">Enter place address</string>
    <string name="add_image_btn">Add image</string>
    <string name="place_picker_btn">Pick place</string>
    <string name="place_address_hint">Place Address</string>
    <string name="trip_title_hint">Trip Title</string>
    <string name="trip_desc_hint">Trip Description</string>
    <string name="from_btn">From</string>
    <string name="to_btn">To</string>
    <string name="trip_to_hint">Trip Target Address</string>
    <string name="trip_from_hint">Trip Start Address</string>
    <string name="time_picker_btn">Pick time</string>
    <string name="date_picker_btn">Pick Date</string>
</resources>
