<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arman.horus.activities.AddTripActivity"
    tools:showIn="@layout/activity_add_trip">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <include layout="@layout/add_images" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/trip_title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/trip_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_title_hint"
                android:inputType="textShortMessage" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/trip_desc_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_trip_field_margin_top">

            <EditText
                android:id="@+id/trip_desc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/trip_desc_hint"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/from_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawableLeft="@drawable/ic_from"
                android:drawablePadding="-10dp"
                android:drawableStart="@drawable/ic_from"
                style="@style/form_btn"
                android:text="@string/from_btn" />

            <Button
                android:id="@+id/to_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawableLeft="@drawable/ic_to"
                android:drawablePadding="-10dp"
                android:drawableStart="@drawable/ic_to"
                android:text="@string/to_btn"
                style="@style/form_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/trip_from_input_layout"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/trip_from_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_from_hint"
                    android:inputType="textShortMessage" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/trip_to_input_layout"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/trip_to_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_to_hint"
                    android:inputType="textShortMessage" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">


            <Button
                android:id="@+id/pick_date_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_calendar1"
                android:drawablePadding="10dp"
                android:layout_weight="0.5"
                android:drawableStart="@drawable/ic_calendar1"
                android:text="@string/date_picker_btn"
                style="@style/form_btn" />

            <Button
                android:id="@+id/pick_time_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clock"
                android:layout_weight="0.5"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_clock"
                android:text="@string/time_picker_btn"
                style="@style/form_btn" />
        </LinearLayout>

        <Button
            android:id="@+id/create_trip_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/form_save_btn"
            android:text="@string/create_place_btn" />

    </LinearLayout>

</ScrollView>
