<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arman.horus.activities.AddPlaceActivity"
    tools:showIn="@layout/activity_add_place">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <include layout="@layout/add_images"></include>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/place_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/place_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_name_hint"
                android:inputType="textShortMessage" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/place_description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/place_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/place_description_hint"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/pick_place_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pick_place"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_pick_place"
            android:layout_marginTop="20dp"
            style="@style/form_btn"
            android:text="@string/place_picker_btn" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/place_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/place_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:hint="@string/place_address_hint"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/create_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_place_btn"
            style="@style/form_save_btn" />

    </LinearLayout>
</ScrollView>